			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

02-Oct-2001
~~~~~~~~~~~
New option to control whether a middle button drag moves the files or
brings up a menu.
Allow submenus in AppInfo.xml file (Stephen Watson).

26-Sep-2001
~~~~~~~~~~~
Now supports Gtk+-1.3.9, but not earlier developer releases.

25-Sep-2001
~~~~~~~~~~~
Disk Usage can cope with larger sizes, and reports the number of files and
directories counted; new Show Hidden and Inherit Options options; new -c
option to close directories; and changes to formatting of file sizes
(Bernard Jungen).

24-Sep-2001
~~~~~~~~~~~
Updated Hungarian translation (Andras Mohari).
Improved the filename colouring code so that colours are only allocated
if needed (Andras Mohari) and fixed a colourmap problem (Stephen Watson).
Bugfix: When sorting while winking an item, the filer would sometimes scroll
	to the wrong place (Andras Mohari).
Bugfix: If all the selected files were deleted, then trying to paste the
	selection caused a crash (Fabien Coutant).

20-Sep-2001
~~~~~~~~~~~
Colour files by type (Andras Mohari).

11-Sep-2001
~~~~~~~~~~~
Added -p to mkdir in install scripts to create any missing parent
directories (Michel Alexandre Salim).

09-Sep-2001
~~~~~~~~~~~
Dragging files with the middle button (or Button1+Alt) brings up a menu
of possible actions (Taras).
New option to control size of icons in `New' and `Send To' menus (Stephen
Watson).
Bugfix: Pinboard icons didn't draw correctly if their windows got resized
	(reported by Michel Alexandre Salim).

06-Sep-2001
~~~~~~~~~~~
Window positions can be saved and restored by a session manager (Anders
Lundmark).

05-Sep-2001
~~~~~~~~~~~
Fixed an untranslated string (Andras Mohari).

04-Sep-2001
~~~~~~~~~~~
The style for pinboard and panel icon text can be set (requested by Greg
Spath) with:

	widget "*.pinboard-icon" style "..."
	widget "*.panel-icon.*" style "..."

03-Sep-2001
~~~~~~~~~~~