@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+04-Oct-2001
+~~~~~~~~~~~
+When running on a remote machine, display the remote host's name in the
+title bar (Stephen Watson).
+
 02-Oct-2001
 ~~~~~~~~~~~
 New option to control whether a middle button drag moves the files or
